# assembler-interpreter

./: AddOp.cpp  AddOp.hpp  CMakeLists.txt  CmpOp.cpp  CmpOp.hpp  IMutableValue.hpp  IOperation.hpp  IValue.hpp  Intepreter.cpp  Intepreter.hpp  JeOp.cpp  JeOp.hpp  JgOp.cpp  JgOp.hpp  JlOp.cpp  JlOp.hpp  JmpOp.cpp  JmpOp.hpp  MovOp.cpp  MovOp.hpp  MulOp.cpp  MulOp.hpp  PopOp.cpp  PopOp.hpp  PushOp.cpp  PushOp.hpp  ValueLiteral.cpp  ValueLiteral.hpp  ValueRegister.cpp  ValueRegister.hpp  main.cpp  memory.cpp  memory.hpp
